@@ -2,6 +2,15 @@
 Version 1.6.16
 *******************************************************************************
 
+2012-03-06 Fabrice Fontaine <fabrice.fontaine(at)orange.com>
+
+	SF Bug Tracker id 3497714 - Buffer overflows
+
+	Submitted: Fabrice Fontaine ( ffontaine ) - 2012-03-06 07:36:08 PST
+
+	Call to strcpy should be replaced by call to memset and strncpy to
+	avoid getting buffer overflows.
+
 2012-03-05 Marcelo Roberto Jimenez <mroberto(at)users.sourceforge.net>
 
 	SF Bug Tracker id 2989399 - UpnpSetVirtualDirCallbacks API removal in 1.6.x
